# jacg

./: README.md  build.bat  build.sh  build_no_lib.bat  clean.bat  clean.sh  define.xlsx  g.sh  jacg.code-workspace  pub_cc.sh  pub_colors.bat  test.bat  test.xlsx  trans_test.bat
projects/jacg/: CMakeLists.txt  build.bat  build.sh
projects/jacg/src/: json_helper.cpp  json_helper.h  main.cpp  strtk_helper.h  uniqs_tmpl_generator.cpp  uniqs_tmpl_generator.h  uniqs_xlsx_generator.h  uniqs_xlsx_generator_cpp.cpp  utemplate.h
projects/jsoncpp/: build.bat  build.sh  clean.bat
projects/openxlsx/: build.bat  build.sh  clean.bat
projects/openxlsx/OpenXLSX-0.3.1/Examples/: Demo4.cpp
projects/openxlsx/OpenXLSX-20220507/OpenXLSX/: CMakeLists.txt
projects/read_xlsx_test/: CMakeLists.txt  build.bat  jacg.code-workspace
projects/read_xlsx_test/src/: main.cpp  uniqs_xlsx_generator.h
projects/test_simdjson/: build.sh
projects/test_simdjson/cfg_cpp/rules/: ColInitValue.xml  ColReadFunc.xml
projects/test_simdjson/cfg_cpp/templates/: CfgTables.cpp  DT{{%=SheetName%}}.h  DT{{%=SheetName%}}.json
projects/test_simdjson/gen_cpp/: BaseTypes.h  CfgComplexType.h  CfgTables.cpp  CfgTables.h  CfgTypes.h  CfgTypesRead.h  DTtest.h
projects/test_simdjson/include/: json_helper.h
projects/test_simdjson/src/: json_helper.cpp  main.cpp
test/xlsx/: test.xlsx
